Manifest url update.

--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -8,6 +8,7 @@ License-Url: http://ceylon-lang.org/code/licenses/
 Vendor: Red Hat
 Cartridge-Version: 0.0.1
 Cartridge-Vendor: redhat
+Source-Url: https://github.com/matejonnet/openshift-cartridge-ceylon.git
 Categories:
   - service
   - ceylon
