--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -6,7 +6,7 @@ Version: '0.5'
 License: "Please visit ceylon website for license details."
 License-Url: http://ceylon-lang.org/code/licenses/
 Vendor: Red Hat
-Cartridge-Version: 0.0.1
+Cartridge-Version: '0.0.1'
 Cartridge-Vendor: ceylonlangorg
 Source-Url: https://github.com/matejonnet/openshift-cartridge-ceylon.git
 Categories:
