--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -85,3 +85,6 @@ Endpoints:
       - Frontend:      ""
         Backend:       ""
         Options:       { "websocket": 1}
+Additional-Control-Actions:
+    - threaddump
+Install-Build-Required: false
