--- a/bin/control
+++ b/bin/control
@@ -3,7 +3,7 @@
 source ${OPENSHIFT_CEYLON_DIR}bin/util
 source ${OPENSHIFT_CEYLON_DIR}env/*
 
-CEYLON_HOME=/usr/lib/ceylon/${OPENSHIFT_CEYLON_VERSION}/
+CEYLON_HOME=${OPENSHIFT_CEYLON_DIR}usr/ceylon-${OPENSHIFT_CEYLON_VERSION}/
 CEYLON_BIN_DIR=${CEYLON_HOME}bin
 
 OPENSHIFT_CEYLON_MODULES_REPO_DIR=${OPENSHIFT_CEYLON_DIR}data/ceylon_repo
