--- a/bin/control
+++ b/bin/control
@@ -31,6 +31,10 @@ function setupCeylonArgs(){
 	ceylon_repos="${ceylon_repos} --rep http://modules.ceylon-lang.org/repo/1/"
 	# where we compile our modules
 	ceylon_repos="${ceylon_repos} --rep ${OPENSHIFT_CEYLON_MODULES_REPO_DIR}/repo"
+	# See if we need aether
+	if [ -f "${OPENSHIFT_REPO_DIR}/.openshift/markers/enable_aether" ]; then
+		ceylon_repos="${ceylon_repos} --rep aether:$OPENSHIFT_DATA_DIR/.m2/conf/settings.xml"
+	fi
 
 	# FIXME: those are only for the template
 	ceylon_run_args="--define server.bind.host=${OPENSHIFT_CEYLON_IP}"
@@ -124,6 +128,12 @@ function tidy() {
 
 function build() {
 	echo "Building Ceylon app..." | tee -a ${CEYLON_LOG_PATH}
+
+	if [ -f "${OPENSHIFT_REPO_DIR}/.openshift/markers/enable_aether" ]; then
+		# Build a home to Maven
+		mkdir -p $OPENSHIFT_DATA_DIR/.m2/{repository,conf}
+		echo -e  "<settings>\n   <localRepository>$OPENSHIFT_DATA_DIR/.m2/repository</localRepository>\n</settings>\n" > $OPENSHIFT_DATA_DIR/.m2/conf/settings.xml
+	fi
 
 	setupCeylonArgs "compile"
 
