--- a/bin/control
+++ b/bin/control
@@ -38,9 +38,6 @@ function setupCeylonArgs(){
 		ceylon_repos="${ceylon_repos} --rep=aether:$OPENSHIFT_DATA_DIR/.m2/conf/settings.xml"
 	fi
 
-	# FIXME: those are only for the template
-	ceylon_run_args="--define=server.bind.host=${OPENSHIFT_CEYLON_IP} --define=server.bind.port=${OPENSHIFT_CEYLON_HTTP_PORT} --define=server.files.location=${OPENSHIFT_REPO_DIR}web-content/"
-	
 	source ${OPENSHIFT_REPO_DIR}.openshift/config/ceylon.properties
 }
 
@@ -56,7 +53,7 @@ function start() {
 		echo "Application is already running" 1>&2
 	else
 		setupCeylonArgs "run"
-        	run_params="run ${ceylon_args} ${ceylon_run_args} ${ceylon_repos} ${ceylon_module} ${ceylon_module_args}"
+        	run_params="run ${ceylon_args} ${ceylon_repos} ${ceylon_module} ${ceylon_module_args}"
 
 		echo "Executing ${CEYLON_BIN_DIR}/ceylon" | tee -a ${CEYLON_LOG_PATH}
 		echo "With params: ${run_params}" | tee -a ${CEYLON_LOG_PATH}
