--- a/bin/control
+++ b/bin/control
@@ -136,8 +136,8 @@ function build() {
 	setupCeylonArgs "compile"
 
 	printf "Compiling every module in ${OPENSHIFT_REPO_DIR}/source:\n"
-       	compile_params="compile ${ceylon_args} ${ceylon_compile_args} ${ceylon_repos} --encoding ${ceylon_encoding:-utf8} --src ${OPENSHIFT_REPO_DIR}/source --out ${OPENSHIFT_CEYLON_MODULES_REPO_DIR}/repo"
-	${CEYLON_BIN_DIR}/ceylon ${compile_params}
+    compile_params="${ceylon_args} ${ceylon_compile_args} ${ceylon_repos} --encoding=${ceylon_encoding:-utf8} --src=${OPENSHIFT_REPO_DIR}/source --resource=${OPENSHIFT_REPO_DIR}/resource --out=${OPENSHIFT_CEYLON_MODULES_REPO_DIR}/repo"
+	${CEYLON_BIN_DIR}/ceylon compile ${compile_params}
 	
 	echo "Ceylon build done." | tee -a ${CEYLON_LOG_PATH}
 }
