--- a/bin/control
+++ b/bin/control
@@ -15,7 +15,7 @@ function setupCeylonArgs(){
 
 	JAVA_OPTS="$JAVA_OPTS -Dcom.redhat.ceylon.common.tool.terminal.width=9999" #do not wrap output
 	# FIXME: this should not be required, but it is in 1.1 (bug should be fixed in 1.2)
-	JAVA_OPTS="$JAVA_OPTS -Dceylon.cache.repo=${OPENSHIFT_REPO_DIR}/cache"
+	JAVA_OPTS="$JAVA_OPTS -Dceylon.cache.repo=${OPENSHIFT_REPO_DIR}cache"
 
 	if test "${ENABLE_JPDA:-0}" -eq 1 -a "$1" = "run" ; then
 		JAVA_OPTS="$JAVA_OPTS -Xdebug -Xrunjdwp:transport=dt_socket,address=$OPENSHIFT_CEYLON_IP:8787,server=y,suspend=n"
@@ -27,11 +27,11 @@ function setupCeylonArgs(){
 	# extra repo from the application
 	ceylon_repos=" --rep=${OPENSHIFT_REPO_DIR}.openshift/config/modules"
 	# our cache location
-	ceylon_repos="${ceylon_repos} --cacherep=${OPENSHIFT_REPO_DIR}/cache"
+	ceylon_repos="${ceylon_repos} --cacherep=${OPENSHIFT_REPO_DIR}cache"
 	# FIXME: pretty sure that is not required
 	ceylon_repos="${ceylon_repos} --rep=https://modules.ceylon-lang.org/repo/1/"
 	# where we compile our modules
-	ceylon_repos="${ceylon_repos} --rep=${OPENSHIFT_REPO_DIR}/modules"
+	ceylon_repos="${ceylon_repos} --rep=${OPENSHIFT_REPO_DIR}modules"
 	# See if we need aether
 	if [ -f "${OPENSHIFT_REPO_DIR}/.openshift/markers/enable_aether" ]; then
 		ceylon_repos="${ceylon_repos} --rep=aether:$OPENSHIFT_DATA_DIR/.m2/conf/settings.xml"
