--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -1,9 +1,10 @@
 Name: ceylon
 Cartridge-Short-Name: CEYLON
-Display-Name: Ceylon 1.3.1
+Display-Name: Ceylon 1.3.2
 Description: "Say more, more clearly."
-Version: '1.3.1'
+Version: '1.3.2'
 Versions:
+  - '1.3.2'
   - '1.3.1'
   - '1.3.0'
   - '1.2.2'
@@ -13,8 +14,8 @@ Versions:
 License: "Please visit Ceylon website for license details."
 License-Url: http://ceylon-lang.org/code/licenses/
 Vendor: Red Hat
-Cartridge-Version: '1.3.1'
-Compatible-Versions: ['1.3.1', '1.3.0', '1.2.2', '1.2.1', '0.2.0', '0.1.0']
+Cartridge-Version: '1.3.2'
+Compatible-Versions: ['1.3.2', '1.3.1', '1.3.0', '1.2.2', '1.2.1', '0.2.0', '0.1.0']
 Cartridge-Vendor: ceylonlangorg
 Source-Url: https://github.com/ceylon/openshift-cartridge.git
 Categories:
@@ -53,6 +54,7 @@ Cart-Data:
     Type: environment
     Description: "Unique ID which identified the gear. This value changes between gears."
 Provides:
+  - ceylon-1.3.2
   - ceylon-1.3.1
   - ceylon-1.3.0
   - ceylon-1.2.2
@@ -66,6 +68,7 @@ Provides:
   - "ceylon(version) = 1.2.2"
   - "ceylon(version) = 1.3.0"
   - "ceylon(version) = 1.3.1"
+  - "ceylon(version) = 1.3.2"
 Publishes:
   publish-http-url:
     Type: "NET_TCP:httpd-proxy-info"
@@ -92,6 +95,7 @@ Scaling:
   Max: -1
 Group-Overrides:
   - components:
+    - ceylon-1.3.2
     - ceylon-1.3.1
     - ceylon-1.3.0
     - ceylon-1.2.2
